plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.hermes'
version = '0.0.1-SNAPSHOT'

// Spring Boot 3.2.5 manages 3.13.0, which is affected by CVE-2025-48924.
ext['commons-lang3.version'] = '3.18.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    
    // Swagger UI & OpenAPI 3 (For Postman Import)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
    
    // Hibernate 6 JSONB type support
    implementation 'org.hibernate.orm:hibernate-core'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'org.postgresql:postgresql'
    annotationProcessor 'org.projectlombok:lombok'
    
    // Spring Cache & Caffeine for MarketTimeValidator caching
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'com.github.ben-manes.caffeine:caffeine'
    
    // Resilience4j for KIS API RateLimiting & Retry
    implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
    
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}
